fix color contrast issue

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -6,12 +6,17 @@ body {
 .App {
   text-align: center;
   background-color: #282c34;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
+} */
+
+.header-title {
+  background-color: black;
+  height: 80px;
 }
 
 .App-header {
@@ -25,8 +30,6 @@ body {
   width: 20%;
   left: 48%;
   border-radius: 18px;
-  /* padding-left: 300px; */
-  z-index: 1;
 }
 
 .App-link {
@@ -47,7 +50,7 @@ body {
   flex-direction: column;
   justify-content: center;
   padding-bottom: 100px;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 .header-container {
@@ -56,7 +59,6 @@ body {
   background-color: white;
   color: black;
   border-radius: 25px;
-  /* opacity: 0.7; */
   margin-left: 300px;
   margin-right: 300px;
   height: 140px;
