--- a/react/src/Components/style/Profile.css
+++ b/react/src/Components/style/Profile.css
@@ -2,7 +2,6 @@
   position: relative;
   width: 400px;
   top: 50%;
-  left: 150px;
   border: none;
   background-color: #007ab8;
   font-weight: 500;
